--- a/index.css
+++ b/index.css
@@ -7,3 +7,9 @@ main{background-color: #eeeeee;
     display: block;
     margin: 0 auto;
 }
+#title {
+    text-align: center;
+}
+#tribute-info {
+    padding: 10px;
+}
